# oop-project

./: CMakeLists.txt  README.md
src/: main.cpp
src/GUI/: ChessGUI.cpp  ChessGUI.h  chess_gui.cpp  chess_gui.h  chess_gui_core.cpp  chess_gui_input.cpp  chess_gui_render.cpp  gui_bootstrap.cpp  gui_bootstrap.h
src/Game/: Board.h  Common.cpp  Common.h  Coordinates.cpp  Coordinates.h  Game.cpp  Game.h  Move.cpp  Move.h  PawnPiece.cpp  PawnPiece.h  Piece.cpp  Piece.h  game.h
src/Game/Piece/: BishopPiece.cpp  BishopPiece.h  KingPiece.cpp  KingPiece.h  KnightPiece.cpp  KnightPiece.h  PawnPiece.cpp  PawnPiece.h  Piece.cpp  Piece.h  QueenPiece.cpp  QueenPiece.h  RookPiece.cpp  RookPiece.h  bishop_piece.cpp  bishop_piece.h  king_piece.cpp  king_piece.h  knight_piece.cpp  knight_piece.h  pawn_piece.cpp  pawn_piece.h  piece.cpp  piece.h  queen_piece.cpp  queen_piece.h  rook_piece.cpp  rook_piece.h
src/Util/: Debug.cpp  Debug.h  debug.cpp
